# FallingBlock

./: .gitignore  CMakeLists.txt  note.txt
Classes/: AppDelegate.cpp  LayerManager.cpp  LayerManager.h  StoreLayer.cpp  StoreLayer.h  UpgradeLayer.cpp  UpgradeLayer.h
Classes/Actor/: Block.cpp  Block.h  Coin.cpp  Coin.h  Life.cpp  Life.h
Classes/AudioEngine/: AudioEngine.cpp  AudioEngine.h
Classes/Character/: Player.cpp  Player.h
Classes/CoinManager/: CoinManager.cpp  CoinManager.h
Classes/Scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h
Classes/Skill/: BaseSkill.cpp  BaseSkill.h  Shield.cpp  Shield.h  SkillFactory.cpp  SkillFactory.h  X2Coin.cpp  X2Coin.h  X2Jump.cpp  X2Jump.h
Classes/State/: IdleLeftState.cpp  IdleLeftState.h  IdleState.cpp  IdleState.h  JumpingState.cpp  JumpingState.h  MoveLeftState.cpp  MoveLeftState.h  MoveRightState.cpp  MoveRightState.h  MovementState.h
Classes/StatsManager/: CoinManager.cpp  CoinManager.h  StatsManager.cpp  StatsManager.h
Classes/Utilities/: Joystick.cpp  Joystick.h  JumpButton.cpp  JumpButton.h  MileageCounter.cpp  MileageCounter.h  Utilities.cpp  Utilities.h
Classes/WorkingWithData/: JsonManager.cpp  JsonManager.h  SQLiteManager.cpp  SQLiteManager.h
Resources/Links/: logo.psd
Resources/animation/: coin_double.plist  coin_normal.plist  double_jump.plist  skill_sheild.plist  skull_move.plist  spark.plist  wing.plist
Resources/csb/: ButtonGameScene.csb  Layer.csb  LeaderBoard.csb  Loading.csb  Lose.csb  MainMenu.csb  Pause.csb  Setting.csb  Store.csb  Tutorial2.csb  Upgrade.csb
pro.design/: pro.design.ccs  pro.design.cfg  pro.design.udf
pro.design/Resources/animation/: block_falled.plist  coin_change_to_double.plist  coin_normal.plist  life_spawn.plist  shield.plist  skull_relax.plist
pro.design/Resources/csb/: ButtonGameScene.csb  LeaderBoard.csb  MainMenu.csb  Tutorial1.csb  Upgrade.csb
pro.design/cocosstudio/csb/: LeaderBoard.csd  Lose.csd  MainMenu.csd  Store.csd  Upgrade.csd
